# seasushi

./: .gitignore  .gitignore.swp  README.md  paths.info  pyproject.toml  requirements.txt
pudim/: tools.py  ww3.py
pudim/confs/: config_plot_regular_ww3.yaml
pudim/tests/: extract_nc2nc_1timestep.py  plot-regular-ww3.py  plot_ww3.py
scripts/: getVarWW3.py  plot.py  plotComparisonTimeSerie.py
soap/ww3/scripts/: plot.py  plotComparisonTimeSerie.py
sushi/: tools.py  ww3.py
sushi/tests/: plotWW3_global.py  plot_ww3.py  test_default.py
