[tool.poetry]
name = "pudim"
version = "0.1.0"
description = "Processing Unit for Data and Interactive Modules"
authors = ["jtcarvalho <jtcarvalho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
xarray = "^2024.11.0"
cartopy = "^0.24.1"
seaborn = "^0.13.2"
netcdf4 = "^1.7.2"
scipy = "^1.14.1"
pyyaml = "^6.0.2"
notebook = "^7.3.2"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
